--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -176,11 +176,34 @@ i{
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 30% 30% 30%;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     width: 100%;
     height: 100vh;
     grid-template-areas: 'gridDivSec1 gridDivSec2'
                         'gridDivSec1 gridDivSec2'
                          'gridDivSec3 gridDivSec3';
+}
+.sec3 h1{
+   font-size: 3em; 
+}
+.sec3 p{
+    padding-top: 6em;
+    font-size: 1.3em; 
+    text-align: center;
+ }
+.gridDivSec3{
+    display: flex;
+    justify-content: center;
+    padding-top: 20%;
+    
+}
+.gridDivSec1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 .sec3 button{
     color: #F0AA00;
@@ -190,7 +213,8 @@ i{
     background-color: white;
     font-size: 22px;
     border-radius: 50px 50px 50px 50px;
-    margin-top: 50px;
+    margin-top: 10em;
+    
 }
 .sec3 button:hover{
     color: white;
@@ -203,7 +227,6 @@ i{
 }
 .gridDivSec1{
     grid-area: gridDivSec1;
-     ;
 }
 .gridDivSec2{
     grid-area: gridDivSec2;
@@ -217,12 +240,163 @@ i{
 .sec4{
     width: 100%;
     height: 100vh;
+   
+}
+.sec4 h1{
+    text-align: center;
+    font-size: 3em;
+    padding-bottom: 3em;
+}
+.smooth{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.nameText{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-size: 1.5em;
+}
+
+.mySlides {display: none}
+img {vertical-align: middle;}
+
+
+.slideshow-container {
+  padding-top: 1%;
+  max-width: 15%; 
+  position: relative;
+  margin: auto;
+}
+
+
+.prev{
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: #F0AA00;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+.next{
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: #F0AA00;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none; 
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 11px}
+}
+.stimme{
+    margin-top: 6em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #172675;
+    border-radius: 100px;
+    width: 90%;
+    height: 20vh;
+    margin-left: 6em;
+}
+.stimme button{
+    width: 20%;
+    height: 8vh;
+    border-radius: 100px;
+    background-color: #172675;
+    color: white;
+    border: 1px solid white;
+    font-size: 1em;
+    margin-left: 15em;
     
 }
-.caru{  
-    width: 100px;
-    height: 100px;
+span{
+    color: rgba(255, 255, 255, 0.445);
 }
+
 /*----------------------Section4 Ende---------------------------*/
 
 /*----------------------Section5 Anfang---------------------------*/
@@ -246,9 +420,23 @@ i{
         transform: translateY(0);
     }
 }
+/*----------------footer----------------*/
+
 footer{ 
-    height: 20vh;
-    background-color: yellowgreen;
+    height: 25vh;
+}
+.footerDiv1{
+ 
+    display: flex;
+    background-color: #172674;
+    height: 10vh;
+    
+}
+.footerSpan1{
+    padding-left: 65%;
+}
+.footerSpan2{
+    color:white;
 }
 
 
@@ -308,3 +496,5 @@ footer{
         align-items: center;
         flex-direction: column;
 }
+
+
